@@ -1,5 +1,9 @@
 LIST OF CHANGES
 
+ - Samplesheet daemon:
+     fixed logger;
+     changed reference repository root so that it can be run on a staging host.
+
 release 85.2
  - Added 'sample_accession_numbers' to lims shim
  - Deprecated old accessors for qc outcomes.
